--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -3,7 +3,7 @@
 server {
    listen 80 default_server;
    index index.php index.html;
-   root /var/www/html/public;
+   root /var/www/html;
    access_log /var/log/nginx/access.log;
    error_log /var/log/nginx/error.log;
 
@@ -22,7 +22,7 @@ server {
    location ~* \.(jpe?g|gif|png|bmp|ico|css|js|pdf|zip|htm|html|docx?|xlsx?|pptx?|txt|wav|swf|avi|mp\d)$ {
         access_log off;
         log_not_found off;
-        try_files $uri $uri/ /var/www/html/public/tmp/assets$uri /index.php?$args;
+        try_files $uri $uri/ /var/www/html/$uri /index.php?$args;
         expires 1w;
     }
 }
