add mysql driver

--- a/php/Dockerfile
+++ b/php/Dockerfile
@@ -1,6 +1,8 @@
 FROM php:7-fpm
 
-ADD ./php.ini /usr/local/etc/php/conf.d/php.ini
+RUN docker-php-ext-install mysqli pdo pdo_mysql && docker-php-ext-enable pdo_mysql
+
+ADD ./php.ini /usr/local/etc/php/php.ini
 ADD ./public /var/www/html/public
 
 RUN chmod -R 777 /var/www/html/public/tmp
