--- a/.env-sample
+++ b/.env-sample
@@ -1,22 +1,11 @@
-#!/usr/bin/env bash
-
-# See https://docs.docker.com/compose/environment-variables/#the-env-file
-
-# Nginx
-NGINX_HOST=localhost
-
-# PHP
-
-# See https://hub.docker.com/r/nanoninja/php-fpm/tags/
-PHP_VERSION=latest
-
 # MySQL
-MYSQL_HOST=mysql
+MYSQL_HOST=mysqldb
 MYSQL_DATABASE=jds_survey
 MYSQL_ROOT_USER=root
 MYSQL_ROOT_PASSWORD=root
 MYSQL_USER=dev
 MYSQL_PASSWORD=dev
+MYSQL_PORT=3306
 
 # LimeSurvey
 LS_DEBUG=0
