--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,6 +18,8 @@ services:
       context: ./php
     image: asatrya/limesurvey-php
     restart: always
+    env_file:
+      - .env
     volumes:
       - public:/var/www/html/public/
 
