add public/tmp/assets and public/tmp/runtime folder, edit public/assets folder permission

--- a/php/Dockerfile
+++ b/php/Dockerfile
@@ -14,6 +14,7 @@ ADD ./php.ini /usr/local/etc/php/php.ini
 ADD ./public /var/www/html/public
 
 # set file permission
+RUN chmod -R 777 /var/www/html/public/assets
 RUN chmod -R 777 /var/www/html/public/tmp
 RUN chmod -R 777 /var/www/html/public/upload
 RUN chmod -R 777 /var/www/html/public/application/config
